Update io-page doc to 2.2.0.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <div class="by-name">
       <h2>OCaml package documentation</h2>
       <ol>
-      <li><a href="io-page/index.html">io-page</a> <span class="version">2.1.0</span></li>
-      <li><a href="io-page-unix/index.html">io-page-unix</a></li>
-      <li><a href="io-page-xen/index.html">io-page-xen</a></li>
+      <li><a href="io-page/index.html">io-page</a> <span class="version">2.2.0</span></li>
+      <li><a href="io-page-unix/index.html">io-page-unix</a> <span class="version">2.2.0</span></li>
+      <li><a href="io-page-xen/index.html">io-page-xen</a> <span class="version">2.2.0</span></li>
       </ol>
       </div>
     </main>
